<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="simulator_title_icon">Simulator</string>
    <string name="currency_exchange_title_icon">CurrencyExchange</string>
    <string name="update_title_icon">Update</string>
    <string name="filters_title_icon">Filters</string>
    <string name="add_title_icon">Add</string>
    <string name="item_example_price">1,000,000</string>
    <string name="item_example_city">Madrid</string>
    <string name="item_example_type">Castle</string>
    <string name="validate">Validate</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">Description of channel</string>
    <string name="photo_title">Title Photo</string>
    <string name="map_icon">map_icon</string>
    <string name="sold_text_item">SOLD</string>
    <string name="for_sale_text_item">FOR SALE</string>
    <string name="surface_minimum">Surface minimum</string>
    <string name="surface_maximum">Surface maximum</string>
    <string name="city">City</string>
    <string name="price_minimum">Price minimum</string>
    <string name="price_maximum">Price maximum</string>
    <string name="number_of_photos">Number of photos</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="nearby_school">Nearby School</string>
    <string name="nearby_park">Nearby Park</string>
    <string name="nearby_store">Nearby Store</string>
    <string name="publish_since">Publish since</string>
    <string name="sold_since">Sold since</string>
    <string name="validation_filter">Validation filter</string>
    <string name="type_real_estate">Type Real Estate</string>
    <string name="address">Address</string>
    <string name="rooms">Rooms</string>
    <string name="surface">Surface</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="description">Description</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="item_click_photo">item clic photo</string>
    <string name="item_click_folder_photos">item clic folder photos</string>
    <string name="price">Price</string>
    <string name="your_name">Your name</string>
    <string name="validation">Validation</string>
    <string name="published">Published :</string>
    <string name="sold">Sold :</string>
    <string name="price_example">150 000</string>
    <string name="image_item_currency">image item currency</string>
    <string name="example_surface">120</string>
    <string name="example_nb_rooms">3</string>
    <string name="example_nb_bathrooms">2</string>
    <string name="example_nb_bedrooms">3</string>
    <string name="location">Location</string>
    <string name="example_address">15 Cours Victor Hugo, Bordeaux</string>
    <string name="agent">Agent</string>
    <string name="example_name_agent">Stef DS</string>
    <string name="for_code_and_behaviour_mini_map">for code and behaviour mini map</string>
    <string name="image_for_fragment_and_code">image for fragment and code</string>
    <string name="amount_needed">Amount needed</string>
    <string name="personal_contribution">Personal contribution</string>
    <string name="duration_in_year_s">Duration in year(s) :</string>
    <string name="default_value_1_year">Default value : 1 (Year)</string>
    <string name="interest_rate_excluding_insurance">Interest rate (excluding insurance)</string>
    <string name="insurance_rate">Insurance rate</string>
    <string name="monthly_payment">Monthly payment :</string>
    <string name="monthly_insurance">Monthly insurance :</string>
    <string name="total_loan_amount">Total loan amount :</string>
    <string name="type">Type</string>
    <string name="add_or_remove_picture">Add or Remove picture</string>
    <string name="fab_button_click_photo">fab button clic photo</string>
    <string name="fab_button_folder_photos">fab button folder photos</string>
    <string name="edit_price">Edit Price</string>
    <string name="select_date_of_sale">Select date of sale</string>
    <string name="icon_modif_photo">icon modif photo</string>
</resources>