<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/simulator"
        android:icon="@drawable/ic_loan_bank_black_24dp"
        android:title="@string/simulator_title_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/currency"
        android:icon="@drawable/ic_currency_exchange_24"
        android:title="@string/currency_exchange_title_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/realestate_update"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/update_title_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/realestate_filters"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filters_title_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/realestate_add"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/add_title_icon"
        app:showAsAction="always" />
</menu>