<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_surface_min"
            style="@style/TextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/surface_minimum"
            android:padding="2dp"
            app:startIconDrawable="@drawable/ic_baseline_aspect_ratio_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_surface_max"
            style="@style/TextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/surface_maximum"
            android:padding="2dp"
            app:startIconDrawable="@drawable/ic_baseline_aspect_ratio_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_city"
            style="@style/TextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:padding="2dp"
            app:startIconDrawable="@drawable/ic_baseline_add_location_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_price_min"
            style="@style/TextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/price_minimum"
            android:padding="2dp"
            app:startIconDrawable="@drawable/ic_baseline_money_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_price_max"
            style="@style/TextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/price_maximum"
            android:padding="2dp"
            app:startIconDrawable="@drawable/ic_baseline_money_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_photo_min"
            style="@style/TextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_photos"
            android:padding="2dp"
            app:startIconDrawable="@drawable/ic_baseline_photo_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_nearbyRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nearby_restaurant" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_nearbySchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nearby_school" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_nearbyPark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/nearby_park" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_nearbyStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:hint="@string/nearby_store" />
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/Button_date_picker"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/publish_since"
            app:icon="@drawable/ic_baseline_calendar_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/Button_date_pickerSold"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/sold_since"
            app:icon="@drawable/ic_baseline_calendar_24"

            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/Button_validation_filter"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:text="@string/validation_filter"
            android:textAlignment="center"
            app:icon="@drawable/ic_baseline_check_24" />

    </LinearLayout>

</ScrollView>