<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/published"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tw_property_publication_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tw_property_publication_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sold"
                app:layout_constraintStart_toEndOf="@id/pub"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/sold"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tw_property_sold_date"
                app:layout_constraintStart_toEndOf="@id/tw_property_publication_date"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tw_property_sold_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sold"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_photo_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_recycler_height_item_photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_photo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:hint="@string/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColorHint="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_description_height_details"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/purple_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="40"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/price"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_money_24"
                        app:drawableTint="#000000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tw_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="7dp"
                            android:hint="@string/price_example"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/purple_500" />

                        <ImageView
                            android:id="@+id/currency"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:contentDescription="@string/image_item_currency"
                            app:srcCompat="@drawable/ic_currency_dollar_black_24dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/surface"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_aspect_ratio_24"
                        app:drawableTint="#000000" />


                    <TextView
                        android:id="@+id/nb_Surface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="7dp"
                        android:hint="@string/example_surface"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/rooms"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_room_24"
                        app:drawableTint="#000000" />

                    <TextView
                        android:id="@+id/nb_Rooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="7dp"
                        android:hint="@string/example_nb_rooms"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/bathrooms"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_bath_24"
                        app:drawableTint="#000000" />

                    <TextView
                        android:id="@+id/nb_Bathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="7dp"
                        android:hint="@string/example_nb_bathrooms"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/bedrooms"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"

                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_bed_24"
                        app:drawableTint="#000000" />

                    <TextView
                        android:id="@+id/nb_Bedroooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="7dp"
                        android:hint="@string/example_nb_bedrooms"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/location"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                        app:drawableTint="#000000" />

                    <TextView
                        android:id="@+id/textView_adresse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="5dp"
                        android:hint="@string/example_address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/agent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColorHint="@color/black"
                        app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                        app:drawableTint="#000000" />

                    <TextView
                        android:id="@+id/textView_agent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="7dp"
                        android:hint="@string/example_name_agent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="70">

                <fragment
                    android:id="@+id/map_fragment"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/for_code_and_behaviour_mini_map" />

            </FrameLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
